--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ProjectPamNew</string>
     <string name="intro_title">Perbaiki Stylemu <font color="#800000">\nDi Dunia Sepatu ini</font></string>
     <string name="intro_signin">Already have an account? <font color="#800000">Sign in</font></string>
+    <string name="profile_image" />
 </resources>
